// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCardComponent props button 1`] = `
<_EuiPageEmptyPrompt
  body={
    <p>
      Browse integration options to find the best way to add your data and start analyzing.
    </p>
  }
  data-test-subj="noDataCard"
  footer={
    <React.Fragment>
      <EuiTitle
        size="xxs"
      >
        <span>
          Want to learn more?
        </span>
      </EuiTitle>
       
      <EuiLink
        href="https://www.elastic.co/kibana"
        target="_blank"
      >
        Read the docs
      </EuiLink>
    </React.Fragment>
  }
  icon={<ElasticAgentCardIllustration />}
  style={
    Object {
      "maxWidth": 400,
    }
  }
  title={
    <EuiTitle
      size="m"
    >
      <h2>
        Add Data to get started
      </h2>
    </EuiTitle>
  }
/>
`;

exports[`NoDataCardComponent props href 1`] = `
<_EuiPageEmptyPrompt
  actions={
    <EuiButton
      color="primary"
      data-test-subj="kbnOverviewAddIntegrations"
      fill={true}
      href="some path"
    >
      Browse integrations
    </EuiButton>
  }
  body={
    <p>
      Browse integration options to find the best way to add your data and start analyzing.
    </p>
  }
  data-test-subj="noDataCard"
  footer={
    <React.Fragment>
      <EuiTitle
        size="xxs"
      >
        <span>
          Want to learn more?
        </span>
      </EuiTitle>
       
      <EuiLink
        href="https://www.elastic.co/kibana"
        target="_blank"
      >
        Read the docs
      </EuiLink>
    </React.Fragment>
  }
  icon={<ElasticAgentCardIllustration />}
  style={
    Object {
      "maxWidth": 400,
    }
  }
  title={
    <EuiTitle
      size="m"
    >
      <h2>
        Add Data to get started
      </h2>
    </EuiTitle>
  }
/>
`;

exports[`NoDataCardComponent renders 1`] = `
<_EuiPageEmptyPrompt
  body={
    <p>
      Browse integration options to find the best way to add your data and start analyzing.
    </p>
  }
  data-test-subj="noDataCard"
  footer={
    <React.Fragment>
      <EuiTitle
        size="xxs"
      >
        <span>
          Want to learn more?
        </span>
      </EuiTitle>
       
      <EuiLink
        href="https://www.elastic.co/kibana"
        target="_blank"
      >
        Read the docs
      </EuiLink>
    </React.Fragment>
  }
  icon={<ElasticAgentCardIllustration />}
  style={
    Object {
      "maxWidth": 400,
    }
  }
  title={
    <EuiTitle
      size="m"
    >
      <h2>
        Add Data to get started
      </h2>
    </EuiTitle>
  }
/>
`;

exports[`NoDataCardComponent renders with canAccessFleet false 1`] = `
<_EuiPageEmptyPrompt
  body={
    <p>
      This integration is not yet enabled. Your administrator has the required permissions to turn it on.
    </p>
  }
  data-test-subj="noDataCard"
  footer={
    <React.Fragment>
      <EuiTitle
        size="xxs"
      >
        <span>
          Want to learn more?
        </span>
      </EuiTitle>
       
      <EuiLink
        href="https://www.elastic.co/kibana"
        target="_blank"
      >
        Read the docs
      </EuiLink>
    </React.Fragment>
  }
  icon={<ElasticAgentCardIllustration />}
  style={
    Object {
      "maxWidth": 400,
    }
  }
  title={
    <EuiTitle
      size="m"
    >
      <h2>
        Contact your administrator
      </h2>
    </EuiTitle>
  }
/>
`;
